Remove depricated get Url