@@ -17,6 +17,8 @@ import java.io.InputStreamReader;
 import java.net.MalformedURLException;
 import java.net.NetPermission;
 import java.net.SocketPermission;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.URLDecoder;
 import java.nio.charset.StandardCharsets;
@@ -38,16 +40,6 @@ import java.util.stream.Collectors;
 
 @SuppressWarnings("removal")
 public class PolicyFile extends java.security.Policy {
-    public static final Set<String> PERM_CLASSES_TO_SKIP = Set.of(
-        "org.opensearch.secure_sm.ThreadContextPermission",
-        "org.opensearch.secure_sm.ThreadPermission",
-        "org.opensearch.SpecialPermission",
-        "org.bouncycastle.crypto.CryptoServicesPermission",
-        "org.opensearch.script.ClassPermission",
-        "javax.security.auth.AuthPermission",
-        "javax.security.auth.kerberos.ServicePermission"
-    );
-
     public static final Set<Class<?>> KNOWN_PERM_CLASSES = Set.of(
         SocketPermission.class,
         FilePermission.class,
@@ -355,8 +347,7 @@ public class PolicyFile extends java.security.Policy {
         }
     }
 
-    @SuppressWarnings("deprecation")
-    private static URL newURL(String spec) throws MalformedURLException {
-        return new URL(spec);
+    private static URL newURL(String spec) throws MalformedURLException, URISyntaxException {
+        return new URI(spec).toURL();
     }
 }
